--- a/Ceriyo.Toolset.WPF/Views/PlaceableEditorView/PlaceableEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/PlaceableEditorView/PlaceableEditor.xaml
@@ -2,8 +2,463 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
-             prism:ViewModelLocator.AutoWireViewModel="True">
+             prism:ViewModelLocator.AutoWireViewModel="True"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+
+             mc:Ignorable="d"
+             d:DesignHeight="600"
+             d:DesignWidth="600"
+             Background="LightGray">
+
     <Grid>
+
+        <i:Interaction.Triggers>
+            <prism:InteractionRequestTrigger SourceObject="{Binding ConfirmDeleteRequest, Mode=OneWay}">
+                <prism:PopupWindowAction IsModal="True" CenterOverAssociatedObject="True"/>
+            </prism:InteractionRequestTrigger>
+        </i:Interaction.Triggers>
+
+        <Grid.RowDefinitions>
+            <RowDefinition Height="32"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="32"></RowDefinition>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="64"></ColumnDefinition>
+            <ColumnDefinition Width="64"></ColumnDefinition>
+            <ColumnDefinition Width="128"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+
+        <Label
+            Grid.Row="0"
+            Grid.Column="0"
+            Grid.ColumnSpan="2"
+            Margin="4,4,4,4">
+            Placeables:
+        </Label>
+
+
+        <ListBox
+            Grid.Column="0"
+            Grid.Row="1"
+            Grid.ColumnSpan="2"
+            Grid.RowSpan="3"
+            DisplayMemberPath="Name"
+            SelectionMode="Single"
+            ItemsSource="{Binding Placeables}"
+            SelectedItem="{Binding SelectedPlaceable}">
+        </ListBox>
+
+        <Button
+            Grid.Row="4"
+            Grid.Column="0"
+            Margin="5,5,5,5"
+            Command="{Binding NewCommand}">
+            New
+        </Button>
+
+        <Button
+            Grid.Row="4"
+            Grid.Column="1"
+            Margin="5,5,5,5"
+            Command="{Binding DeleteCommand}">
+            Delete
+        </Button>
+
+        <TabControl
+            Grid.Row="0"
+            Grid.Column="3"
+            Grid.RowSpan="5">
+            <TabItem Header="Appearance">
+                
+            </TabItem>
             
+            <TabItem Header="Scripts">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="128"></ColumnDefinition>
+                        <ColumnDefinition Width="*"></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                    </Grid.RowDefinitions>
+
+                    <Label
+                        Grid.Row="0"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Closed:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedPlaceable.OnClosed}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="1"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Opened:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedPlaceable.OnOpened}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="2"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Damaged:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="2"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedPlaceable.OnDamaged}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="3"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Death:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="3"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedPlaceable.OnDeath}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="4"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Heartbeat:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="4"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedPlaceable.OnHeartbeat}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="5"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Disturbed:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="5"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedPlaceable.OnDisturbed}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="6"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Locked:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="6"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedPlaceable.OnLocked}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="7"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Unlocked:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="7"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedPlaceable.OnUnlocked}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="8"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Attacked:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="8"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedPlaceable.OnAttacked}">
+                    </ComboBox>
+
+                    <Label
+                        Grid.Row="9"
+                        Grid.Column="0"
+                        Margin="4,4,4,4">
+                        On Used:
+                    </Label>
+
+                    <ComboBox
+                        Grid.Row="9"
+                        Grid.Column="1"
+                        Margin="4,4,4,4"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        ItemsSource="{Binding Scripts}"
+                        SelectedItem="{Binding SelectedPlaceable.OnUsed}">
+                    </ComboBox>
+
+                </Grid>
+            </TabItem>
+
+            <TabItem Header="Variables">
+                <Grid>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                        <RowDefinition Height="32"></RowDefinition>
+                        <RowDefinition Height="*"></RowDefinition>
+                    </Grid.RowDefinitions>
+
+                    <Label
+                        Grid.Row="0">
+                        Local Strings:
+                    </Label>
+
+                    <DataGrid 
+                        Grid.Row="1"
+                        ItemsSource="{Binding SelectedPlaceable.LocalVariables.LocalStrings}"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        CanUserAddRows="True">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Key" Binding="{Binding Key}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Value" Binding="{Binding Value}"></DataGridTextColumn>
+                        </DataGrid.Columns>
+
+                    </DataGrid>
+
+                    <Label
+                        Grid.Row="2">
+                        Local Numbers:
+                    </Label>
+
+                    <DataGrid 
+                        Grid.Row="3"
+                        ItemsSource="{Binding SelectedPlaceable.LocalVariables.LocalFloats}"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                        CanUserAddRows="True">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Key" Binding="{Binding Key}"></DataGridTextColumn>
+                            <DataGridTextColumn Header="Value" Binding="{Binding Value}"></DataGridTextColumn>
+                        </DataGrid.Columns>
+
+                    </DataGrid>
+
+                </Grid>
+            </TabItem>
+
+            <TabItem Header="Description">
+                <TextBox 
+                		AcceptsReturn="True"
+                		TextWrapping="Wrap"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                		Text="{Binding SelectedPlaceable.Description}" />
+            </TabItem>
+            <TabItem Header="Comments">
+                <TextBox 
+                		AcceptsReturn="True"
+                		TextWrapping="Wrap"
+                        IsEnabled="{Binding IsPlaceableSelected}"
+                		Text="{Binding SelectedPlaceable.Comment}" />
+            </TabItem>
+        </TabControl>
+
+
+        <Grid
+            Grid.Row="0"
+            Grid.Column="2"
+            Grid.RowSpan="5">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="26"></RowDefinition>
+                <RowDefinition Height="26"></RowDefinition>
+                <RowDefinition Height="26"></RowDefinition>
+                <RowDefinition Height="26"></RowDefinition>
+                <RowDefinition Height="26"></RowDefinition>
+                <RowDefinition Height="26"></RowDefinition>
+                <RowDefinition Height="26"></RowDefinition>
+                <RowDefinition Height="26"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+                <RowDefinition Height="32"></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="1">
+                Name:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="2"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedPlaceable.Name}"
+                IsEnabled="{Binding IsPlaceableSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="3">
+                Tag:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="4"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedPlaceable.Tag}"
+                IsEnabled="{Binding IsPlaceableSelected}">
+            </TextBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="5">
+                Resref:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="6"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedPlaceable.Resref}"
+                IsEnabled="{Binding IsPlaceableSelected}">
+            </TextBox>
+
+            <CheckBox
+                Grid.Column="0"
+                Grid.Row="8"
+                Margin="4,4,4,4"
+                IsChecked="{Binding SelectedPlaceable.IsStatic}"
+                IsEnabled="{Binding IsPlaceableSelected}">
+                Static
+            </CheckBox>
+
+            <CheckBox
+                Grid.Column="0"
+                Grid.Row="9"
+                Margin="4,4,4,4"
+                IsChecked="{Binding SelectedPlaceable.IsPlot}"
+                IsEnabled="{Binding IsPlaceableSelected}">
+                Plot
+            </CheckBox>
+
+            <CheckBox
+                Grid.Column="0"
+                Grid.Row="10"
+                Margin="4,4,4,4"
+                IsChecked="{Binding SelectedPlaceable.IsUseable}"
+                IsEnabled="{Binding IsPlaceableSelected}">
+                Useable
+            </CheckBox>
+
+            <CheckBox
+                Grid.Column="0"
+                Grid.Row="11"
+                Margin="4,4,4,4"
+                IsChecked="{Binding SelectedPlaceable.IsLocked}"
+                IsEnabled="{Binding IsPlaceableSelected}">
+                Locked
+            </CheckBox>
+
+            <CheckBox
+                Grid.Column="0"
+                Grid.Row="12"
+                Margin="4,4,4,4"
+                IsChecked="{Binding SelectedPlaceable.IsKeyRequired}"
+                IsEnabled="{Binding IsPlaceableSelected}">
+                Key Required
+            </CheckBox>
+
+            <CheckBox
+                Grid.Column="0"
+                Grid.Row="13"
+                Margin="4,4,4,4"
+                IsChecked="{Binding SelectedPlaceable.AutoRemoveKey}"
+                IsEnabled="{Binding IsPlaceableSelected}">
+                Auto Remove Key
+            </CheckBox>
+
+            <Label
+                Grid.Column="0"
+                Grid.Row="15">
+                Key Tag:
+            </Label>
+
+            <TextBox
+                Grid.Column="0"
+                Grid.Row="16"
+                Margin="4,4,4,4"
+                Text="{Binding SelectedPlaceable.KeyTag}">
+            </TextBox>
+            
+        </Grid>
+
     </Grid>
 </UserControl>
