--- a/Ceriyo.Toolset.WPF/Views/ResourceEditorView/ResourceEditor.xaml
+++ b/Ceriyo.Toolset.WPF/Views/ResourceEditorView/ResourceEditor.xaml
@@ -2,8 +2,250 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:prism="http://prismlibrary.com/"             
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             d:DesignWidth="500"
+             d:DesignHeight="500"
+             Background="White"
              prism:ViewModelLocator.AutoWireViewModel="True">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="24"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="*"></RowDefinition>
+        </Grid.RowDefinitions>
+        
+        <Menu
+            Grid.Column="0"
+            Grid.Row="0"
+            Grid.ColumnSpan="3">
+            <MenuItem Header="File">
+                <MenuItem 
+                    Header="New"
+                    Command="{Binding NewCommand}">
+                </MenuItem>
+                <MenuItem 
+                    Header="Open"
+                    Command="{Binding OpenCommand}">
+                </MenuItem>
+                <Separator></Separator>
+                <MenuItem 
+                    Header="Save"
+                    Command="{Binding SaveCommand}">
+                </MenuItem>
+                <MenuItem 
+                    Header="Save As..."
+                    Command="{Binding SaveAsCommand}">
+                </MenuItem>
+                <Separator></Separator>
+                <MenuItem 
+                    Header="Exit"
+                    Command="{Binding ExitCommand}">
+                </MenuItem>
+                
+            </MenuItem>
+            <MenuItem Header="Resource">
+                <MenuItem 
+                    Header="Add Resource..."
+                    Command="{Binding AddResourceCommand}">
+                </MenuItem>
+                <MenuItem 
+                    Header="Remove Resources"
+                    Command="{Binding RemoveResourcesCommand}">
+                </MenuItem>
+            </MenuItem>
+        </Menu>
+        
+        <TabControl
+            Grid.Column="0"
+            Grid.Row="1"
+            Grid.ColumnSpan="3"
+            Grid.RowSpan="3"
+            SelectedIndex="{Binding SelectedTabIndex}">
+
+            <TabItem Header="Creatures">
+                <DataGrid 
+                  ItemsSource="{Binding CreatureResources}"
+                  AutoGenerateColumns="False"
+                  CanUserDeleteRows="True"
+                  CanUserResizeRows="False"
+                  CanUserAddRows="False">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="File Name"
+                                    IsReadOnly="True"
+                                    Binding="{Binding FileName}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Extension"
+                                    IsReadOnly="True"
+                                    Binding="{Binding Extension}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Size (Bytes)"
+                                    IsReadOnly="True"
+                                    Binding="{Binding SizeBytes}">
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </TabItem>
             
+            <TabItem Header="Icons">
+                <DataGrid 
+                  ItemsSource="{Binding IconResources}"
+                  AutoGenerateColumns="False"
+                  CanUserDeleteRows="True"
+                  CanUserResizeRows="False"
+                  CanUserAddRows="False">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="File Name"
+                                    IsReadOnly="True"
+                                    Binding="{Binding FileName}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Extension"
+                                    IsReadOnly="True"
+                                    Binding="{Binding Extension}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Size (Bytes)"
+                                    IsReadOnly="True"
+                                    Binding="{Binding SizeBytes}">
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </TabItem>
+            
+            <TabItem Header="Items">
+                <DataGrid 
+                  ItemsSource="{Binding ItemResources}"
+                  AutoGenerateColumns="False"
+                  CanUserDeleteRows="True"
+                  CanUserResizeRows="False"
+                  CanUserAddRows="False">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="File Name"
+                                    IsReadOnly="True"
+                                    Binding="{Binding FileName}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Extension"
+                                    IsReadOnly="True"
+                                    Binding="{Binding Extension}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Size (Bytes)"
+                                    IsReadOnly="True"
+                                    Binding="{Binding SizeBytes}">
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </TabItem>
+            
+            <TabItem Header="Portraits">
+                <DataGrid 
+                  ItemsSource="{Binding PortraitResources}"
+                  AutoGenerateColumns="False"
+                  CanUserDeleteRows="True"
+                  CanUserResizeRows="False"
+                  CanUserAddRows="False">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="File Name"
+                                    IsReadOnly="True"
+                                    Binding="{Binding FileName}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Extension"
+                                    IsReadOnly="True"
+                                    Binding="{Binding Extension}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Size (Bytes)"
+                                    IsReadOnly="True"
+                                    Binding="{Binding SizeBytes}">
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </TabItem>
+            
+            <TabItem Header="Tilesets">
+                <DataGrid 
+                  ItemsSource="{Binding TilesetResources}"
+                  AutoGenerateColumns="False"
+                  CanUserDeleteRows="True"
+                  CanUserResizeRows="False"
+                  CanUserAddRows="False">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="File Name"
+                                    IsReadOnly="True"
+                                    Binding="{Binding FileName}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Extension"
+                                    IsReadOnly="True"
+                                    Binding="{Binding Extension}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Size (Bytes)"
+                                    IsReadOnly="True"
+                                    Binding="{Binding SizeBytes}">
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </TabItem>
+
+            <TabItem Header="BGM">
+                <DataGrid 
+                  ItemsSource="{Binding BGMResources}"
+                  AutoGenerateColumns="False"
+                  CanUserDeleteRows="True"
+                  CanUserResizeRows="False"
+                  CanUserAddRows="False">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="File Name"
+                                    IsReadOnly="True"
+                                    Binding="{Binding FileName}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Extension"
+                                    IsReadOnly="True"
+                                    Binding="{Binding Extension}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Size (Bytes)"
+                                    IsReadOnly="True"
+                                    Binding="{Binding SizeBytes}">
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </TabItem>
+
+            <TabItem Header="SFX">
+                <DataGrid 
+                  ItemsSource="{Binding SFXResources}"
+                  AutoGenerateColumns="False"
+                  CanUserDeleteRows="True"
+                  CanUserResizeRows="False"
+                  CanUserAddRows="False">
+
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="File Name"
+                                    IsReadOnly="True"
+                                    Binding="{Binding FileName}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Extension"
+                                    IsReadOnly="True"
+                                    Binding="{Binding Extension}">
+                        </DataGridTextColumn>
+                        <DataGridTextColumn Header="Size (Bytes)"
+                                    IsReadOnly="True"
+                                    Binding="{Binding SizeBytes}">
+                        </DataGridTextColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
+            </TabItem>
+            
+        </TabControl>
+        
     </Grid>
 </UserControl>
